--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
-h1,h2,h3,h4,h5,h6{
+h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
-h1{
-    color: darkcyan;
+h1 {
+    color: blue;
     font-size: xxx-large;
 }
 
-h2{
+h2 {
     color: darkcyan;
     font-size: large;
 }
 
-button{
+button {
     width: max-content;
     color: darkcyan;
     background-color: aqua;
@@ -20,18 +20,18 @@ button{
     border-radius: 20px;
 }
 
-*{
+* {
     text-align: center;
 }
 
-div{
+div {
     background-color: lightgreen;
     border-radius: 100px;
     padding: 0;
     margin: 10px;
 }
 
-aside{
+aside {
     vertical-align: middle;
     horiz-align: left;
 }
@@ -74,4 +74,32 @@ footer {
     padding: 10px;
     text-align: center;
     color: white;
+}
+
+
+/* Style for the star icon */
+.fa-star {
+    margin-left: 5px; /* Add some spacing between the text and the icon */
+    color: #ffcc00; /* Change the color to match the text */
+}
+
+.star-rating input[type="radio"] {
+    display: none;
+}
+
+.star-rating label {
+    font-size: 30px;
+    color: #ccc;
+    cursor: pointer;
+}
+
+.star-rating input[type="radio"]:checked ~ label {
+    color: #ffcc00; /* Change the color to indicate the selected rating */
+}
+
+.rate-us {
+    font-size: 30px; /* Adjust the font size to match the star labels */
+    text-align: right; /* Align the text to the right */
+    color: #cc0; /* Change the color to make it stand out */
+    margin-right: 10px; /* Add some margin for spacing */
 }
