--- a/css/style.css
+++ b/css/style.css
@@ -99,22 +99,7 @@ footer {
 
 .signup-and-login-caption{}
 
-#reg {
-    font-size: x-large;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 5px solid black;
-    border-radius: 10px;
-    padding: 20px;
-    width: 80%;
-    margin-left: 100px;
-    margin-right:100px;
-    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.2);
-}
-
-#login {
+.green-background-form {
     font-size: x-large;
     display: flex;
     flex-direction: column;
