--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ footer section ul li {
 }
 
 /* Style for the star icon */
-.fa-star {
+.yellow {
     margin-left: 5px; /* Add some spacing between the text and the icon */
     color: #ffcc00; /* Change the color to match the text */
 }
@@ -238,12 +238,17 @@ footer section ul li {
 
 .star-rating label {
     font-size: 30px; /* Size of the stars */
-    color: #ccc; /* Default color for unchecked stars */
+    color: #ffcc00; /* Default color for all stars (yellow) */
     cursor: pointer; /* Show pointer cursor on hover */
 }
 
 .star-rating input[type="radio"]:checked ~ label {
     color: #ffcc00; /* Yellow color for checked stars */
+}
+
+.alfonz{
+    unicode-bidi:bidi-override;
+    direction:rtl;
 }
 
 .signup-and-login-caption {
@@ -259,6 +264,15 @@ footer section ul li {
     border-radius: 10px;
     padding: 20px;
     width: 35%;
+    margin: 30px auto 0;
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.2);
+}
+
+.background-form-but-wider-for-profile-section{
+    font-size: x-large;
+    border: 5px solid black;
+    border-radius: 10px;
+    width: 80%;
     margin: 30px auto 0;
     box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.2);
 }
@@ -283,12 +297,13 @@ input[type="submit"]:hover {
     background-color: #45a049;
 }
 
-.choose-a-topic-to-learn {
+.choose-a-lesson-to-learn {
     border: 5px white; /* not working for some reason*/
     font-size: 30px; /* Adjust the font size to match the star labels */
     text-align: left; /* Align the text to the right */
     font-family: sans, serif;
     color: yellow;
+    margin-left: 10px;
     margin-right: 10px; /* Add some margin for spacing */
 }
 
@@ -323,7 +338,7 @@ input[type="submit"]:hover {
 }
 
 .gray-background {
-    background-color: #555
+    background-color: #888
 }
 
 .left, .left h1, h2, h3 {
@@ -453,7 +468,6 @@ footer section ul li {
 }
 
 .feedback-form {
-    display: flex;
     justify-content: center; /* Horizontally center the content */
     align-items: center; /* Vertically center the content */
     padding: 20px;
@@ -557,4 +571,85 @@ footer section ul li {
 
 .left-align {
     text-align: left;
+}
+
+input[type="submit"]:hover {
+    transform: translateY(-5px); /* Move button up by 5 pixels */
+}
+
+input[type="submit"]:active {
+    background-color: #FFFFE0;
+}
+
+img:hover {
+    transform: scale(1.025);
+}
+
+.display-block{
+    display:block;
+}
+
+.colorpicker{
+    width: 30vw;
+    height: 30vh;
+}
+
+fieldset{
+    border-radius: 10px;
+}
+
+.choose-your-interests, .choose-your-interests > *{
+    font-size: small;
+}
+
+.a{
+ width: 100%;
+}
+
+.black-font{
+    color: black;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+/* Style for custom checkbox */
+.custom-checkbox {
+    display: inline-block;
+    position: relative;
+    padding-left: 25px;
+    margin-right: 15px;
+    cursor: pointer;
+}
+
+/* Checkmark design */
+.custom-checkbox::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: 1px;
+    width: 18px;
+    height: 18px;
+    border: 2px solid #ccc;
+    background-color: #fff;
+}
+
+/* Show checkmark when checkbox is checked */
+.custom-checkbox input:checked + .checkmark::after {
+    content: "";
+    position: absolute;
+    left: 5px;
+    top: 2px;
+    width: 8px;
+    height: 15px;
+    border: solid #000;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
+/* Style for the label */
+.custom-checkbox label {
+    font-size: 16px;
 }
