--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ nav a {
     text-align: left; /* Align the text to the right */
     font-family: sans, serif;
     color: yellow;
-    margin-right: 10px; /* Add some margin for spacing */
+    margin-right: 10px; /* Some margin for spacing */
 }
 
 .nav.current_page {
@@ -191,10 +191,6 @@ nav a {
     margin-left: 100px;
     margin-right: 100px;
     box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.2);
-}
-
-section {
-    padding: 20px;
 }
 
 footer {
@@ -223,7 +219,7 @@ footer section ul li {
 
 /* Style for the star icon */
 .yellow {
-    margin-left: 5px; /* Add some spacing between the text and the icon */
+    margin-left: 5px; /* Some spacing between the text and the icon */
     color: #ffcc00; /* Change the color to match the text */
 }
 
@@ -304,7 +300,7 @@ input[type="submit"]:hover {
     font-family: sans, serif;
     color: yellow;
     margin-left: 10px;
-    margin-right: 10px; /* Add some margin for spacing */
+    margin-right: 10px; /* Some margin for spacing */
 }
 
 .yellow-font {
@@ -370,10 +366,9 @@ input[type="submit"]:hover {
     font-family: 'Courier New', Courier, monospace;
 }
 
-/* Add your CSS styles here */
 .animation-demo img {
     cursor: pointer; /* Change cursor to pointer to indicate clickable */
-    transition: transform 0.5s ease; /* Add smooth transition effect */
+    transition: transform 0.5s ease; /* Smooth transition effect */
 }
 
 /* Define CSS animations */
@@ -534,9 +529,13 @@ footer section ul li {
 }
 
 .progress-bar-inner {
-    background-color: #4caf50;
+    background-color: gray;
     border-radius: 5px;
     height: 100%;
+}
+
+.progress-bar-inner:hover{
+    background-color: darkgray;
 }
 
 .margin-30-px {
